--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>
             Attendance Calculator
         </title>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        
         <link rel="stylesheet" href="bunk.css">
     </head>
     <body style="background-color:rgb(17, 17, 17); ">    
@@ -36,14 +38,14 @@
             </div>
             <div class="calc">
                 <div class="major">   
-                    <div class="BingBong">
+                    <div class="BingBang">
                             <input type="button" value="Calculate" class="Calculate" onclick="calculate();">
                     </div>
                 </div>
             </div>
-            <div id="demn" >
-                    Your Attendance is low.
-            </div>
+        </div>
+        <div id="tableContainer">
+            <!-- Table will be generated here -->
         </div>
         <script src="bunk.js"></script>
     </body>
