--- a/index.html
+++ b/index.html
@@ -44,9 +44,15 @@
                 </div>
             </div>
         </div>
-        <div id="tableContainer">
-            <!-- Table will be generated here -->
-        </div>
         <script src="bunk.js"></script>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-R6F5QSFHFH"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-R6F5QSFHFH');
+        </script>
     </body>
 </html> 
